Fixed spacing on main tag, adjusted font sizes

--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@ main {
     align-items: center;
     justify-content: center;
     position: relative;
+    top: 50px;
     padding-top: 220px;
 }
 
@@ -79,8 +80,9 @@ main {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    width: 400px;
+    width: 450px;
     height: 30px;
+    font-size: 14px;
     outline: none;
     border: none;
 }
@@ -99,10 +101,12 @@ main {
     margin-right: 5px;
     padding: 10px;
     border-radius: 4px;
+    font-size: 14px;
 }
 
 .luckybutton {
     margin-left: 5px;
     padding: 10px;
     border-radius: 4px;
+    font-size: 14px;
 }
